force-app/main/default/objects/Document_Request_Config__mdt/Document_Request_Config__mdt.object-meta.xml
<CustomObject>
    <label>Document Request Config</label>
    <pluralLabel>Document Request Configs</pluralLabel>
</CustomObject>