force-app/main/default/objects/Document_Request_Config__mdt/fields/Allowed_File_Extensions__c.field-meta.xml
<CustomField>
    <fullName>Allowed_File_Extensions__c</fullName>
    <defaultValue>"pdf,jpg,jpeg,png,doc,docx,xls,xlsx"</defaultValue>
    <label>Allowed File Extensions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>