force-app/main/default/objects/Document_Request_Config__mdt/fields/Default_Expiration_Days__c.field-meta.xml
<CustomField>
    <fullName>Default_Expiration_Days__c</fullName>
    <defaultValue>7</defaultValue>
    <label>Default Expiration Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>