force-app/main/default/objects/Document_Request_Config__mdt/fields/Max_File_Size_MB__c.field-meta.xml
<CustomField>
    <fullName>Max_File_Size_MB__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Max File Size (MB)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>