force-app/main/default/objects/Document_Request_Config__mdt/fields/Max_Files_Per_Upload__c.field-meta.xml
<CustomField>
    <fullName>Max_Files_Per_Upload__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Max Files Per Upload</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>