force-app/main/default/objects/Document_Request_Config__mdt/fields/Quick_Action_Label__c.field-meta.xml
<CustomField>
    <fullName>Quick_Action_Label__c</fullName>
    <label>Quick Action Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>