force-app/main/default/objects/Document_Request_Config__mdt/fields/Recipient_Contact_Field_Path__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Contact_Field_Path__c</fullName>
    <label>Recipient Contact Field Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>