force-app/main/default/objects/Document_Request_Config__mdt/fields/Recipient_Email_Field_Path__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Email_Field_Path__c</fullName>
    <label>Recipient Email Field Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>