force-app/main/default/objects/Document_Request_Config__mdt/fields/Recipient_Name_Field_Path__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Name_Field_Path__c</fullName>
    <label>Recipient Name Field Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>