force-app/main/default/objects/Document_Request_Config__mdt/fields/Source_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Object_API_Name__c</fullName>
    <label>Source Object API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>