force-app/main/default/objects/Document_Request_Config__mdt/listViews/Active_Configurations.listView-meta.xml
<ListView>
    <fullName>Active_Configurations</fullName>
    <columns>MasterLabel</columns>
    <columns>Source_Object_API_Name__c</columns>
    <columns>Recipient_Email_Field_Path__c</columns>
    <columns>Recipient_Name_Field_Path__c</columns>
    <columns>Default_Expiration_Days__c</columns>
    <columns>Max_File_Size_MB__c</columns>
    <columns>Max_Files_Per_Upload__c</columns>
    <columns>Allowed_File_Extensions__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Configurations</label>
</ListView>