force-app/main/default/objects/Document_Request_Config__mdt/listViews/All_Configurations.listView-meta.xml
<ListView>
    <fullName>All_Configurations</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Source_Object_API_Name__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Recipient_Email_Field_Path__c</columns>
    <columns>Default_Expiration_Days__c</columns>
    <columns>Max_File_Size_MB__c</columns>
    <columns>Allowed_File_Extensions__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Configurations</label>
</ListView>